force-app/main/default/objects/Vehicle__c/fields/Available_Seats__c.field-meta.xml
<CustomField>
    <fullName>Available_Seats__c</fullName>
    <label>Available Seats</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>