force-app/main/default/objects/Vehicle__c/fields/Simplified_View__c.field-meta.xml
<CustomField>
    <fullName>Simplified_View__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Simplified View</label>
    <type>Checkbox</type>
</CustomField>